backend: delete virtual review
