# api/routers/index.js
@@ -4,5 +4,6 @@ module.exports = {
 	categoryRouter: require("./category.router"),
 	kitchenRouter: require("./kitchen.router"),
 	recipeRouter: require("./recipe.router"),
+	reviewRouter: require("./review.router"),
 	stageRouter: require("./stage.router")
 };
